אירי וגורה, שותה עם גורה, תמונה של הכפר הגלובלי, דעתניות ורוטב בשאמל

--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>אירי</li>
 
+<li>אירי וגורה</li>
+
 <li>אירי טוענת</li>
 
 <li>איריס</li>
@@ -336,6 +338,8 @@ Error message and password prompt
 <li>דןדן נסע</li>
 
 <li>דניאל</li>
+
+<li>דעתניות</li>
 
 <li>דפני אברואה</li>
 
@@ -661,6 +665,8 @@ Error message and password prompt
 
 <li>רוז'ה</li>
 
+<li>רוטב בשאמל</li>
+
 <li>רזיאל ורפאל</li>
 
 <li>ריגו יאנצ'י</li>
@@ -674,6 +680,8 @@ Error message and password prompt
 <li>שָה נוּאָר</li>
 
 <li>שואה</li>
+
+<li>שותה עם גורה</li>
 
 <li>שיטת אלכסנדר</li>
 
@@ -8426,9 +8434,8 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;https://en.wikipedia.org/wiki/Pain_aux_raisins&quot;,
-            &quot;type&quot;: &quot;text/plain&quot;
+            &quot;text&quot;: &quot;משתכרת עם גורה&quot;,
+            &quot;title&quot;: &quot;Untitled&quot;
         }
     }
 }</pre>
@@ -8527,10 +8534,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170627160348539" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20170716140713081" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Drafts</pre>
 </div>
-<div created="20161023184705203" modified="20170627160548785" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170716145419837" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8539,7 +8546,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חשיפה לצפון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8559,7 +8566,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170714141224094" title="$:/temp/search">
+<div created="20161023184814872" modified="20170716151849739" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8814,26 +8821,14 @@ Error message and password prompt
 
 &lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170415105721479" modified="20170423214308882" title="אחיות חוץ">
+<div created="20170415105721479" modified="20170716152616669" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
 
-ככה יויו ואני כתבנו [[אז|המעבדה]]:
+יש הרבה מאד אחיות חוץ מבחינתנו, וכאן [[בגנזך|נאמני הגנזך]] אנו מוסיפות מפעם לפעם, באהבה והערצה, כשאחות חוץ כלשהי צצה בזכרון מי מאיתנו, בהקשר לדברים שרצתה להגיד או משהו, והוא מכניס אותה לכאן.
 
-[[האחיות כהן]] הינה קבוצה יצירתית, שעל פי הגדרתה את עצמה לא כל מי שחבר בה חייב לעסוק ביצירה לפרנסתו או באופן קבוע, אלא רואה את היצירתיות כחלק מחיי היומיום וכעניין הכרחי.
-כמו כן כל מי שמשתייכת לאחיות הינה אחות כהן גם אם מינה הוא זכר.
 
-האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית אגב צפייה בשידורים חוזרים של אודטה, כאשר בבסיס יצירתן עומד המשפט של האחות הסופר [[ג'ון אירווינג]]: &quot;החיים רציניים אך האומנות היא תענוג&quot;
-
-שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים [[איתן וג'ואל כהן]] – שכותבים ואף מביימים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
-
-זוהי קבוצה הולכת ומתרחבת של אנשים,שהוקמה כסוג של בדיחה וממשיכה להתקיים ברצינות תהומית, בהומור  ובענווה – בחדרים בקיבוצים, בדירות עירוניות, בבתי ההורים ואף מעבר ל[[ים טתיס]].
-
-האחיות בוחרות לעצמן אחים ללא מורא ואף ללא ידיעתם. 
-כבר בטקסט הכתוב לעיל אפשר לראות איך בחרו לעצמן את האח אירווינג ואת האחים הבימאים איתן וג'ואל, וכמותן יש עוד רבים (מצוינים ומשובחים), שיצוינו בהמשך, וכן ילכו ויתווספו . 
-
-האחיות חוץ שבגנזך:
 
 &lt;&lt;list-links filter:&quot;[tag[אחיות חוץ]]&quot;&gt;&gt;
 </pre>
@@ -8918,6 +8913,15 @@ Error message and password prompt
 
 
 </pre>
+</div>
+<div created="20170714164238581" modified="20170715115636559" tags="" title="אירי וגורה">
+<pre>[img[pictures/asakim-caragil.jpg]]
+
+!!![[אירי]] [[וגורה|גורה]]:
+
+''כן, למרות שהגענו לכדור הזה, אנחנו משדרות,  עסקים כרגיל.''
+
+&lt;&lt;list-links filter:&quot;[tag[אירי וגורה]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20170601134808349" modified="20170601162616966" title="אירי טוענת">
 <pre>[img[pictures/iri-toenet.jpg]]
@@ -9170,7 +9174,7 @@ Error message and password prompt
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170425194155286" modified="20170711173923960" title="בחוות החיות">
+<div created="20170425194155286" modified="20170714164647361" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9614,6 +9618,11 @@ Is where I want to be
 
 </pre>
 </div>
+<div created="20170717145725241" modified="20170717145925933" tags="[[אירי וגורה]]" title="דעתניות">
+<pre>[img[pictures/daataniyot.jpg]]
+
+אחת הבעיות איתנו הנשים, ויש לא מעט כאלה, היא, באם אנו דעתניות.</pre>
+</div>
 <div created="20170225205632304" modified="20170610184745764" tags="[[ילדים חד הוריים]]" title="דפני אברואה">
 <pre>[img[pictures/dafni-abaroa.jpg]]
 
@@ -9810,8 +9819,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
 </div>
-<div created="20161217212236965" modified="20170512210251617" title="הכפר הגלובלי">
-<pre>[img[pictures/AVIu5KJGU2HK5QKR.JPG]]
+<div created="20161217212236965" modified="20170715130439651" tags="[[אירי וגורה]]" title="הכפר הגלובלי">
+<pre>[img[pictures/hacfar-haglobaly.jpg]]
 
 !!![[אירי]] [[וגורה|גורה]]:
 
@@ -9896,7 +9905,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170604143905675" title="המעבדה">
+<div created="20161113192814802" modified="20170716150358012" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו''
@@ -9905,7 +9914,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[כשהיינו כאן|בחוות החיות]], הדשא שלפני הבית היה גדול, והגיע עד לירידה לנחל. בסתיו ובחורף הוא היה  משופע פרחים. נרקיסים, רקפות, כלניות.
 
-למעשה יויו התגורר כאן, בתקופה שהתחבר [[למקלדת|מקלדת]] והפך [[לאווה כהן|אווה]], ואני הייתי על תקן האחות, שמבקרת לעתים תכופות.
+למעשה יויו התגורר כאן בתקופה שהתחבר [[למקלדת|מקלדת]] והפך [[לאווה כהן|אווה]], ואני הייתי על תקן האחות, שמבקרת לעתים תכופות.
 
 כך כתבנו אז:
 
@@ -10704,7 +10713,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170610184436279" modified="20170630184906226" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
+<div created="20170610184436279" modified="20170716140644078" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
 
 !!![[ראשל]]:
@@ -10724,7 +10733,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ההורים שלי נפרדו כשהייתי בת 11. סבא, אביה של אימי, נפטר שנתיים קודם, ואימא כבר הודתה בפני, שרק אחרי שסבי נפטר העזה להתגרש.
 אבא שלי הוא לא כייף. הפסקתי להיפגש איתו כשמלאו לי 14, ומאז אני גם בטיפול פסיכולוגי. אני לא יודעת מתי ואם אפגש איתו, אך  לעת עתה אני פשוט לא מעוניינת לראות אותו. 
 
-הזמן מרפא אותנו, וכעת, לאימא ולנו יש את [[ג'וזף]] ואלפרד ואת [[האחיות|האחיות כהן]], ויש  כתפיים, עליהן אפשר להניח את הראש [[ולנוח|https://www.youtube.com/watch?v=KDbPYoaAiyc]]. 
+הזמן מרפא אותנו, וכעת, לאימא ולנו יש את [[ג'וזף|ג'וזף אברואה]] ואלפרד ואת [[האחיות|האחיות כהן]], ויש  כתפיים, עליהן אפשר להניח את הראש [[ולנוח|https://www.youtube.com/watch?v=KDbPYoaAiyc]]. 
 
 &lt;&lt;list-links filter:&quot;[tag[ילדים חד הוריים]]&quot;&gt;&gt;</pre>
 </div>
@@ -11152,7 +11161,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, בכייף שלהם החזירים מחלקים סלולרים.''</pre>
 </div>
-<div created="20170406164152446" modified="20170531194021668" title="מחפשת את אירי">
+<div created="20170406164152446" modified="20170714164758778" tags="[[אירי וגורה]]" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
@@ -13234,6 +13243,80 @@ Fapina''
 
 </pre>
 </div>
+<div created="20170718152042465" modified="20170719144841699" tags="[[חיות אוכל]]" title="רוטב בשאמל">
+<pre>[img[pictures/rotev-bashamel.jpg]]
+
+
+!!![[יויו]]:
+
+בזמן האחרון נדלקתי על [[רוטב בשאמל|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%98%D7%91_%D7%91%D7%A9%D7%90%D7%9E%D7%9C]]. ראשית כי בהרבה מאד מהימים האחרונים בא לי על אוכל לבן, ושנית כי גיליתי שזה הכי קל בעולם ושאפשר להוסיף לזה הרבה דברים.
+
+''אופן ההכנה:''
+
+בקלחת:
+
+1. ממיסים 50 גרם חמאה על חום נמוך
+
+2. טורפים כף קמח לתוך החמאה הנמסה עד שהתערובת חלקה.
+
+3. מוסיפים כוס חלב תוך ערבוב עד שהכל אחיד
+
+4. ממשיכים לבשל ולערבב (כשהרביכה חמה כדאי לערבב אפילו כל דקה ולקראת הסוף כל הזמן), החלב הולך ומסמיך. עוצרים את הבישול כשכבר מרגישים את הסמיכות בערבוב, והנוזל נראה קרמי וחמים.
+
+''
+זהו בעצם הבשאמל ואפשר להכפיל את הכמות לפי הצורך''
+
+
+עכשיו אפשר לתבל אותו בדרכים רבות, למזוג אותו על דברים שונים ולאפות.
+
+לפני כמה ימים - בעצם כש&quot;גיליתי&quot; את הבשמל - הייתי רעב. אף אחד לא היה [[בדירה|הדירה]]. סרקתי בראשי אפשרויות. המקרר היה די ריק.
+
+1. הכנתי בשמל כפול 4
+
+2. צליתי במחבת כמה עגבניות שרי חתוכות ושתי שיני שום חתוכות במעט חמאה
+
+3. במחבת שניה אידתי תרד, ועלי בזיליקום
+
+4. את עלי התרד והבזיליקום ערבבתי עם 250 גרם גבינה רכה ולא מלוחה שמתאימה לאפייה
+
+5. לוקחים תבנית גדולה וגלילי קנלוני, וממלאים אותם בתערובת הגבינה והתרד (מעט כל פעם, בעדינות ובעזרת האצבעות, ממלאים את מרכז הגליל), ומסדרים בתבנית.
+
+6. לבשמל הוספתי שליש כוס גבינות מגוררות, ואת העגבניות הצלויות, מלח, פלפל שחור ואגוז מוסקט, ומזגתי מעל הקנלוני.
+
+7. מניחים נייר אלומיניום מעל הקנלוני, ואופים 45 דקות ב 170 מעלות
+
+8. מסירים את נייר הכסף וממשיכים לאפות 15-25 דקות - עד שהצבע יפה ומוציאים מהתנור.
+
+''החומרים:''
+
+לבשמל  (פי ארבעה מהמתכון הבסיסי):
+
+*200 גרם חמאה
+*4 כוסות חלב
+*4 כפות קמח לבן
+
+לשאר המאפה:
+
+* כ-20 גלילי קנלוני
+*10-20 עגבניות שרי
+*מעט חמאה לטיגון העגבניות
+*שתי שיני שום
+*עלי תרד 
+*עלי בזיליקום
+*250 גרם גבינה רכה ללא מלח שמתאימה לאפייה
+*שליש כוס גבינה קשה מגוררת
+*תבלינים: מלח ים, פלפל שחור גרוס ואגוז מוסקט טחון
+
+
+
+
+
+
+
+
+
+</pre>
+</div>
 <div created="20170202133543180" modified="20170425162003640" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
@@ -13495,6 +13578,21 @@ Fapina''
 
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
+</div>
+<div created="20170717183951845" modified="20170718151532476" tags="[[כשהם ישנים]]" title="שותה עם גורה">
+<pre>[img[pictures/miz-anavim.jpg]]
+
+!!![[אווה]]:
+
+בשבת האחרונה התעוררתי, כמו תמיד, לפני פיליפ ואיריס, ובנייד היה מסרון מגורה. ששאלה אם היא יכולה לבוא. עניתי לה מיד שכן, והתקלחתי הכי מהר שאפשר. תוך כדי שאלתי את עצמי מה אכין לנו. נזכרתי בענבים הלא יפים שהרגיזו אותי. הנחתי על הכיריים קומקום קפה, הוצאתי את הענבים וניקיתי אותם, טחנתי אותם בפולסים עדינים עם מיץ לימון ומעט סוכר, וכשגורה הגיע שתינו קפה וקוקטייל וודקה עם מיץ ענבים ולימון.
+
+אופן ההכנה:
+
+1. ענבים מרוסקים (היה לי כמעט קילו אותו נקיתי וטחנתי עם בערך שליש כוס מיץ לימון, ארבע כפות סוכר, שקיק סוכר וניל והרבה קרח).
+
+2. על כל שוט של וודקה הוספנו חצי כוס ממיץ ענבים וקרח מלוא הכוס
+
+והיה מעולה</pre>
 </div>
 <div created="20161206222443036" modified="20170606171349561" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
