--- a/index.html
+++ b/index.html
@@ -8546,7 +8546,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="דעתניות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9618,10 +9618,10 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170717145725241" modified="20170717145925933" tags="[[אירי וגורה]]" title="דעתניות">
+<div created="20170717145725241" modified="20170719151609598" tags="[[אירי וגורה]]" title="דעתניות">
 <pre>[img[pictures/daataniyot.jpg]]
 
-אחת הבעיות איתנו הנשים, ויש לא מעט כאלה, היא, באם אנו דעתניות.</pre>
+אחת הבעיות איתנו הנשים, ויש לא מעט כאלה, היא, שקורה שאנחנו דעתניות.</pre>
 </div>
 <div created="20170225205632304" modified="20170610184745764" tags="[[ילדים חד הוריים]]" title="דפני אברואה">
 <pre>[img[pictures/dafni-abaroa.jpg]]
