--- a/index.html
+++ b/index.html
@@ -471,6 +471,8 @@ Error message and password prompt
 
 <li>וינסנט ואן-גוך</li>
 
+<li>וס אנדרסון</li>
+
 <li>ז'נבייב</li>
 
 <li>זקופי הגו</li>
@@ -8610,7 +8612,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הסיפור על גורה, שסופר לאווה, על ידי יויו]] [[אווה מספרת 13]] [[אווה מספרת 12]] [[אווה מספרת 11]] [[אווה מספרת 10]] [[אווה מספרת 09]] [[אווה מספרת 08]] [[אווה מספרת 07]] [[אווה מספרת 06]] [[אווה מספרת 05]] [[אווה מספרת 04]] [[אווה מספרת 03]] [[אווה מספרת 02]] [[אווה מספרת  01]] [[אירי וגורה]] [[הכפר הגלובלי]] [[ילדים חד הוריים]] [[שותה עם גורה]] [[רוטב בשאמל]] דעתניות מיזונפלציה הכתיבה [[אוטו מטריה]] יויו [[המטבח על פי ז'נבייב]] [[מנקים היטב]] המעבדה [[חשיפה לצפון]] [[סוף הנחלה]] [[גורה מספרת 01]] [[גורה מספרת 02]] [[גורה מספרת 04]] [[גורה מספרת 03]] [[גורה מספרת 05]] [[גורה מספרת 06]] [[גורה מספרת 07]] [[גורה מספרת 08]] [[גורה מספרת 09]] [[גורה מספרת 10]] [[גורה מספרת 11]] [[גורה מספרת 12]] [[גורה מספרת 13]] [[גורה מספרת 14]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[וס אנדרסון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11131,6 +11133,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20170728103845790" modified="20170728105859981" tags="[[אחיות חוץ]]" title="וס אנדרסון">
+<pre>[img[pictures/wes-anderson.jpg]]
+
+!!![[גורה]]:
+
+אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע ויפה וחכם וסימטרי -שזה הכי חשוב.</pre>
 </div>
 <div created="20161112221314170" modified="20170618163433454" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
