--- a/index.html
+++ b/index.html
@@ -11134,12 +11134,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170728103845790" modified="20170728110729318" tags="[[אחיות חוץ]]" title="וס אנדרסון">
+<div created="20170728103845790" modified="20170728112434590" tags="[[אחיות חוץ]]" title="וס אנדרסון">
 <pre>[img[pictures/wes-anderson.jpg]]
 
 !!![[גורה]]:
 
-אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע ויפה וחכם וסימטרי - שזה הכי חשוב.</pre>
+אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
 <div created="20161112221314170" modified="20170618163433454" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
