--- a/index.html
+++ b/index.html
@@ -569,6 +569,8 @@ Error message and password prompt
 
 <li>מיזונפלציה</li>
 
+<li>מימי של אלפרד</li>
+
 <li>מיצפרש</li>
 
 <li>מישל גונדרי</li>
@@ -8612,7 +8614,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[וס אנדרסון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מימי של אלפרד]] [[מחפשת את אירי]] [[גורה מספרת 14]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11899,6 +11901,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כלומר, מה שאני מנסה לומר הוא - שכאשר הגעתי לעבודה אצל ז'נבייב, והיא אמרה לי, שמה שהיא רוצה ממני זה עזרה במיז-און-פלאס, חיברתי את המילים והבנתי את מה שהיא אמרה.
 
 
+
+</pre>
+</div>
+<div created="20170728130049527" modified="20170728141322692" tags="[[חלומות שחלמנו]] [[אחות כהן]] [[סיפורים אמיתיים]]" title="מימי של אלפרד">
+<pre>[img[pictures/mimi-shel-alfred.jpg]]
+
+!!![[יויו]]:
+
+מימי של [[אלפרד]] היא one man show. הם היו נשואים כמה שנים כשהיו באמצע שנות העשרים שלהם. לפני חודש בערך היא הגיעה איתו [[לדירה|הדירה]]. היא באה לצלם איזה אנרכיסט ספרדי שחי כעת בפריז. היא נוסעת בוואן סגור שיש בו מיטה וציוד שהיא קימבנה, שמהווה סט אולפן. זה כולל מצלמה עליה יושבות עוד שתי מצלמות רגילות ואחת שהיא רחף. לכל מצלמה אפשר להוסיף גוף תאורה ומיקרופון ואם צריך אז גם טלפרומפטר.  לידיות שמניעות את הקונסטרוקציה הזו מחוברים שלטים, שאיתם היא מנתבת בזמן אמת את התמונה, כולל אפשרות לשילוב של וידאו קיים ושליטה בסאונד. אכן כן. היא התחבבה מאד על כולנו והפכה [[לאחות|אחות כהן]].
 
 </pre>
 </div>
