--- a/index.html
+++ b/index.html
@@ -8620,7 +8620,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ארנון חן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8640,7 +8640,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170729135729600" title="$:/temp/search">
+<div created="20161023184814872" modified="20170729202822751" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9308,12 +9308,12 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170505164125282" modified="20170505175818962" tags="[[סיפורים אמיתיים]]" title="אימא שלי">
+<div created="20170505164125282" modified="20170729200729069" tags="[[סיפורים אמיתיים]]" title="אימא שלי">
 <pre>[img[pictures/ima-sheli-iri.jpg]]
 
 !!![[אירי]]:
 
-באפריל אמי הגיעה אלי לביקור, ואחד מהדברים שהיא סיפרה לי הוא, ששנתיים לפני שנולדתי, לאחר שמונה חודשי הריון, היא ילדה ולד מת. לאורך כל השנים אמי תהתה בינה לבינה, וגם בינה לבין אבי, אם לספר לי או לא, אך שניהם לא הצליחו מעולם לעשות את זה, וכעת לאחר הפרידה מאבי, החלה ללכת שוב לטיפול, ואחד מהדברים שנתבקשה מהמטפלת שלה הוא, לספר לי על כך, שהיא ואבא אהבו מאד זה את זה כשנפגשו והכירו. היא אמרה, שלאחר המקרה, רוחה נפלה, ובנקודת הזמן ההיא, היא חושבת, שהחל להתפתח מרחק בינה ובין אבי. 
+באפריל אמי, ששמה הוא עדנה, הגיעה אלי לביקור, ואחד מהדברים שהיא סיפרה לי הוא, ששנתיים לפני שנולדתי, לאחר שמונה חודשי הריון, היא ילדה ולד מת. לאורך כל השנים אמי תהתה בינה לבינה, וגם בינה לבין אבי, אם לספר לי או לא, אך שניהם לא הצליחו מעולם לעשות את זה, וכעת לאחר הפרידה מאבי, החלה ללכת שוב לטיפול, ואחד מהדברים שנתבקשה מהמטפלת שלה הוא, לספר לי על כך, שהיא ואבא אהבו מאד זה את זה כשנפגשו והכירו. היא אמרה, שלאחר המקרה, רוחה נפלה, ובנקודת הזמן ההיא, היא חושבת, שהחל להתפתח מרחק בינה ובין אבי. 
 
 ויש לי דבר אחד להגיד על זה
 
@@ -9605,12 +9605,13 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170729122045070" modified="20170729135709546" tags="[[אירי טוענת]]" title="ארנון חן">
+<div created="20170729122045070" modified="20170729204444850" tags="[[אירי טוענת]]" title="ארנון חן">
 <pre>[img[pictures/arnon-chen.jpg]]
 
 !!![[אירי]]:
 
-ארנון חן הוא אבא שלי, והוא ללא ספק &quot;דמות עגולה&quot;, למרות שהוא ללא ספק אדם רזה.</pre>
+ארנון חן הוא אבא שלי, והוא ללא ספק &quot;דמות עגולה&quot;, למרות שהוא ללא ספק אדם רזה.
+</pre>
 </div>
 <div created="20170319170256065" modified="20170507182017466" tags="HH" title="אשת העסקים">
 <pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
@@ -10241,10 +10242,10 @@ Is where I want to be
 הוא אמר ודי שתק אחר כך. שנינו קמנו יחד, התיישבנו לידה ורק הבטנו בה עוד ועוד. הבטתי בפניה אחרת עכשיו. כמו בכל הימים אני רואה את הפנים חסרות המבע ויותר מכול העיניים שבקושי נעות הורגות אותי, אך כבר די מבינה שזה משהו שהיא עושה ביודעין. הסתכלתי עליה עוד פנימה לתוך האישונים בלי להפסיק וכמעט בלי למצמץ. ניסיתי לראות אם אני יכולה לצלול לתוכה. כל הדברים שבעולם הציפו אותי. נזכרתי נורא באחות שלי גיגי, שיש בה משהו קצת כמו אירי. ובאבא ובאמא וכולם בערך עברו במחשבותיי וזה הגיע אל דןדן, וזה נעצר שם בתור תמונה של הפנים שלו על מסך טלוויזיה ישן ודי קטן בתוך סלון משנות החמישים-שישים, ואני יושבת על הספה ליד סבתא שמחבקת אותי, ואני קטנה וגופי נטוי אליה וראשי מונח על החזה שלה והיא מלטפת אותי.
 </pre>
 </div>
-<div created="20170727150043110" modified="20170729123408675" tags="[[מחפשת את אירי]]" title="גורה מספרת 11">
+<div created="20170727150043110" modified="20170729203926289" tags="[[מחפשת את אירי]]" title="גורה מספרת 11">
 <pre>[img[pictures/mechapeset-11.jpg]]
 
-ככה עוד שתקנו זמן מה והם הגיעו בסופו של דבר. לא יודעת אחרי כמה זמן. הדלת נפתחה, דןדן פתח אותה ונכנס ראשון מחייך אלינו וממשיך לדבר עם ארנון, מפנה לו דרך ומראה לו בידו את המזרן שעליו אירי שוכבת. ארנון מיהר להיכנס אחריו ואז עמליה נכנסה. ארנון מיד רץ לאירי ונגע בה. ראה שהיא חיה, כורע על ברכיו, נוגע בה שוב לאט ובעדינות, מניח את ראשו לפני גופה, מתעשת, מרים את עצמו, מסתכל עליה, מסתכל עלינו. אחרי שהעביר מבטו על כולם חזר אליי, חייך חיוך גדול, קם ונתן לי חיבוק אבהי טוב כזה. בה בשנייה התייפחנו שנינו.
+ככה עוד שתקנו זמן מה והם הגיעו בסופו של דבר. לא יודעת אחרי כמה זמן. הדלת נפתחה, דןדן פתח אותה ונכנס ראשון מחייך אלינו וממשיך לדבר עם [[ארנון|ארנון חן]], מפנה לו דרך ומראה לו בידו את המזרן שעליו אירי שוכבת. ארנון מיהר להיכנס אחריו ואז עמליה נכנסה. ארנון מיד רץ לאירי ונגע בה. ראה שהיא חיה, כורע על ברכיו, נוגע בה שוב לאט ובעדינות, מניח את ראשו לפני גופה, מתעשת, מרים את עצמו, מסתכל עליה, מסתכל עלינו. אחרי שהעביר מבטו על כולם חזר אליי, חייך חיוך גדול, קם ונתן לי חיבוק אבהי טוב כזה. בה בשנייה התייפחנו שנינו.
 
 אחרי שסיימנו את החיבוק הוא ניגש ולחץ את כף ידו של מייקי וגם את זו של עמליה. הוא הודה להם, הוא חייך אל דןדן, חיבק אותו, הוא ניגש שוב לאירי, התיישב מולה והביט אל תוך עיניה הפקוחות בלא זיע.
 
@@ -10595,7 +10596,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161116181512747" modified="20170508145729067" tags="[[אחות כהן]]" title="דניאל">
+<div created="20161116181512747" modified="20170729201140471" tags="[[אחות כהן]]" title="דניאל">
 <pre>[img[pictures/29wJW52SFPcRk5HR.jpg]]
 
 !!![[דןדן]]:
@@ -10603,7 +10604,7 @@ Is where I want to be
 אני בחרתי לכתוב על דניאל, משום שהוא אחד האנשים שבאו אלי משום מקום ועל המקום קלט אותי. הוא כמובן הגיע עם אלפרד לארוחה, וזו הייתה הפעם הראשונה שנפגשנו. הוא בן 27, והוא סיים תואר ראשון בפסיכולוגיה לפני שנתיים. בשנת הלימודים הקרובה, הוא מתחיל תואר שני בפסיכולוגיה מחקרית. המחקר שלו קשור בעישון מריחואנה והזכרון לטווח קצר. ומי אם לא אלפרד, נקרה בדרכו בקורס [[כירולוגיה פסיכודיאגנוסטית]]. קנדידט אולטימטיבי שמעריץ את ה[[גן-יה]].
 הוא די גבוה, יש לו בלורית נאה ועיניים חומות  ומתקן ליישור שיניים. הוא נע כל הזמן באי נוחות מצד לצד, אבל לא כמו יויו. יויו הוא יותר מתנדנד, ודניאל יותר מעביר משקל מרגל לרגל באי נוחות, ועימם את האגן ואת הראש.
 הוא אחד הבודדים ש&quot;עלו עלי&quot;. לרוב אני הוא זה ש&quot;עולה&quot; על אחרים, כמו שכתוב בסיפור של אווה.
-הוא מצטרף אל אלפרד ואלי לא מעט כשאנחנו משפצים רהיטים, ובודאות הוא ראה בדיוק מה קרה לי בניו יורק כשהייתי בן 17 בבית של פיני הבית של פיני. הוא מעשן וויד רק פה ושם, ובאותו יום עישנו.
+הוא מצטרף אל אלפרד ואלי לא מעט כשאנחנו משפצים רהיטים, ובודאות הוא ראה בדיוק מה קרה לי בניו יורק כשהייתי בן 17 בבית של פיני. הוא מעשן וויד רק פה ושם, ובאותו יום עישנו.
 [[צ'נג]] והוא התחילו את ה[[וויקי שלנו|האחיות כהן]], ובכך אפשרו לכל אחד מאיתנו למלא וליצור עוד ועוד וויקי'ס ובתנאי ששרל'ה הייתה אוהבת את זה.
 
 </pre>
@@ -10633,7 +10634,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170728110719153" title="האחיות כהן">
+<div created="20161111215423587" modified="20170729195350297" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -10646,7 +10647,7 @@ Is where I want to be
 
 כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
 
-לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, [[תמיד אהבתי|כשהיו מעט מכוניות]] להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם [[אבי|אבא יואל]] ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''.  אני שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני [[ישבנו|האסיפה הראשונה]] ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא, ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה, והיה לה ראש מאד מעניין, והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר, ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
+לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, [[תמיד אהבתי|כשהיו מעט מכוניות]] להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן ויואל כהן|איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם [[אבי|אבא יואל]] ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''.  אני שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני [[ישבנו|האסיפה הראשונה]] ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא, ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה, והיה לה ראש מאד מעניין, והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר, ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג [[כפוליטיקאי|פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח [[שאת זה שרלה לא הייתה אוהבת|שרלה לא הייתה אוהבת את זה]]. 
 
 או כמו שגורה ואני כתבנו בשעתו, כשגרתי [[בין האלונים|המעבדה]].
 
@@ -11248,14 +11249,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[חיות אוכל]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170422183732891" modified="20170423215513092" title="חלומות שחלמנו">
+<div created="20170422183732891" modified="20170729203311901" title="חלומות שחלמנו">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
 !!![[יויו]]:
 
-תמיד חלמתי להיות [[מפקח נקיון במטבח של מסעדה|מנקים היטב]], אבל מה שעוד יותר יפה, זה שמימוש החלום הזה הביא לי עוד חלומות:
+תמיד חלמתי להיות [[מפקח נקיון במטבח של מסעדה|מנקים היטב]], אבל מה שעוד יותר יפה, זה שמימוש החלום הזה עורר והעיר עוד חלומות:
 
-* למשל המפעיל יד,שטרם קרה.
 
 &lt;&lt;list-links filter:&quot;[tag[חלומות שחלמנו]]&quot;&gt;&gt;
 
@@ -14073,12 +14073,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170405141252134" modified="20170422201859875" tags="[[חלומות שחלמנו]]" title="תיקי גב לקניות שדןדן ויויו הכינו">
+<div created="20170405141252134" modified="20170729203650277" tags="[[חלומות שחלמנו]]" title="תיקי גב לקניות שדןדן ויויו הכינו">
 <pre>[img[pictures/tik-kniyot.jpg]]
 
 !!![[גורה]]:
 
-מאחר שאחד עיסוקיו המרכזיים של יויו הוא הליכה  לקניות בשוק, הוא החליט שהוא רוצה לבנות תיק גב נח.
+מאחר שאחד מעיסוקיו המרכזיים של יויו הוא הליכה  לקניות, הוא החליט שהוא רוצה לבנות תיק גב נח.
 
 זה היה קצת אחרי שעברנו [[לדירה|הדירה]], וכמה חודשים לפני [[שדןןדןן נסע|דןדן נסע]].
 
