--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@ Error message and password prompt
 
 <li>$:/state/Excise/-392760529/new-title</li>
 
+<li>$:/state/folded/אימא מהאגדות</li>
+
 <li>$:/state/folded/ברוכים הבאים</li>
 
 <li>$:/state/folded/גורה מספרת 07</li>
@@ -8563,6 +8565,9 @@ Error message and password prompt
 <div created="20161026202105658" modified="20161026202107028" title="$:/state/Excise/-392760529/new-title">
 <pre>הדירה</pre>
 </div>
+<div created="20170730120044565" modified="20170730120044565" title="$:/state/folded/אימא מהאגדות">
+<pre>hide</pre>
+</div>
 <div created="20161024121359650" modified="20161024121402274" title="$:/state/folded/ברוכים הבאים">
 <pre>show</pre>
 </div>
@@ -8620,7 +8625,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ארנון חן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8640,7 +8645,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170729202822751" title="$:/temp/search">
+<div created="20161023184814872" modified="20170730115831422" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9289,7 +9294,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170616194246231" modified="20170618000151513" tags="[[סיפורים אמיתיים]]" title="אימא מהאגדות">
+<div created="20170616194246231" modified="20170730135241415" tags="[[סיפורים אמיתיים]]" title="אימא מהאגדות">
 <pre>[img[pictures/ima-mehaagadot.jpg]]
 
 !!![[אנג'ליק]]:
