--- a/toot.html
+++ b/toot.html
@@ -15,7 +15,10 @@
 </head>
 <body>
   <div class="container">
-    <h1><a id="page-title" href="./">לדבר על זה<br>
+    <img style="max-width:8em; height:auto; float:left"
+         src="pictures/sisterbotcoen-mordech.png"/>
+    <h1>
+      <a id="page-title" href="./">לדבר על זה<br>
       <small>עם האחות ב. כהן</a></small>
     </h1>
     <p class="status" id="toot-intro">
@@ -24,16 +27,22 @@
     </p>
     <p class="status" id="toot-found">
       אתן מוזמנות
-      להגיב ו/או לעשות לייקים בנושא
+      להגיב ו/או לעשות לייקים
+      ב<a target="_blank" href="https://tooot.in">תווות.ים</a>
+      בנושא
       <strong><a href="" id="tootlink"><span class="subject"></span></a></strong>.
     </p>
     <p class="status" id="toot-not-found">
       לצערנו, האחות ב. כהן מעולם לא דיברה על
-      "<span class="subject"></span>".
+      <strong><span class="subject"></span></strong>.
       אולי זה קרה לפני שהיא נולדה.
     </p>
     <hr/>
-    <p><a href="https://tooot.im/@sisterbotcoen" target="_blank" rel="noopener noreferrer">האחות ב. כהן</a> היא השגרירה ה<a href="https://he.wikipedia.org/wiki/%D7%91%D7%95%D7%98" target="_blank" rel="noopener noreferrer">רובוטית</a> של האחיות ברשת החברתית <a href="https://mekomit.co.il/%d7%9e%d7%a1%d7%98%d7%95%d7%93%d7%95%d7%9f/" target="_blank" rel="noopener noreferrer">מסטודון</a>. היא מדווחת שם על <a target="_blank" href="http://coensisters.org#%D7%9C%D7%A7%D7%91%D7%9C%20%D7%94%D7%AA%D7%A8%D7%90%D7%95%D7%AA%20%D7%A2%D7%9C%20%D7%97%D7%99%D7%93%D7%95%D7%A9%D7%99%D7%9D%20%D7%91%D7%90%D7%AA%D7%A8">חידושים</a> באתר האחיות.</p><p>אם אתן כבר שם, תוכלו פשוט <a href="https://tooot.im/users/sisterbotcoen/remote_follow" target="_blank" rel="noopener noreferrer">לעקוב</a> אחריה. אם לא, ובא לכן להכיר רשת שהיא "<a href="https://motherboard.vice.com/en_us/article/783akg/mastodon-is-like-twitter-without-nazis-so-why-are-we-not-using-it" target="_blank" rel="noopener noreferrer">כמו טוויטר, רק בלי הנאצים</a>", תוכלו להצטרף לשרת העברי <strong><a href="https://tooot.im/about" target="_blank" rel="noopener noreferrer">תווותים</a></strong> (בכלל, כדאי לקרוא את ה<a href="https://github.com/Toootim/Resources/blob/master/info/welcome.md#%D7%91%D7%A8%D7%95%D7%9B%D7%95%D7%AA-%D7%94%D7%91%D7%90%D7%95%D7%AA-%D7%9C%D7%9E%D7%A1%D7%98%D7%95%D7%93%D7%95%D7%9F" target="_blank" rel="noopener noreferrer">מדריך</a> שם, שמסביר מה זה מסטודון ובמה הוא שונה מהרשתות החברתיות שהורגלנו אליהן).</p><p>יש גם <a href="https://github.com/tootsuite/documentation/blob/master/Using-Mastodon/Apps.md#list-of-apps" target="_blank" rel="noopener noreferrer">אפליקציות לסלולרים</a>.</p>
+    <p><a href="https://tooot.im/@sisterbotcoen" target="_blank" rel="noopener noreferrer">האחות ב. כהן</a> היא השגרירה ה<a href="https://he.wikipedia.org/wiki/%D7%91%D7%95%D7%98" target="_blank" rel="noopener noreferrer">רובוטית</a> של האחיות ברשת החברתית <a href="https://mekomit.co.il/%d7%9e%d7%a1%d7%98%d7%95%d7%93%d7%95%d7%9f/" target="_blank" rel="noopener noreferrer">מסטודון</a>. היא מדווחת שם על <a target="_blank" href="http://coensisters.org#%D7%9C%D7%A7%D7%91%D7%9C%20%D7%94%D7%AA%D7%A8%D7%90%D7%95%D7%AA%20%D7%A2%D7%9C%20%D7%97%D7%99%D7%93%D7%95%D7%A9%D7%99%D7%9D%20%D7%91%D7%90%D7%AA%D7%A8">חידושים</a> באתר האחיות.
+    הפוסטים שלה הם גם מקום מצויין לדון בו באייטמים אליהם היא מפנה
+    (כמו אינטגרציה עם תגובות בפייסבוק, רק בלי הריגול).</p>
+    <p>אם אתן כבר שם, תוכלו פשוט <a href="https://tooot.im/users/sisterbotcoen/remote_follow" target="_blank" rel="noopener noreferrer">לעקוב</a> אחריה. אם לא, ובא לכן להכיר רשת שהיא "<a href="https://motherboard.vice.com/en_us/article/783akg/mastodon-is-like-twitter-without-nazis-so-why-are-we-not-using-it" target="_blank" rel="noopener noreferrer">כמו טוויטר, רק בלי הנאצים</a>", תוכלו להצטרף לשרת העברי <strong><a href="https://tooot.im/about" target="_blank" rel="noopener noreferrer">תווותים</a></strong> (בכלל, כדאי לקרוא את ה<a href="https://github.com/Toootim/Resources/blob/master/info/welcome.md#%D7%91%D7%A8%D7%95%D7%9B%D7%95%D7%AA-%D7%94%D7%91%D7%90%D7%95%D7%AA-%D7%9C%D7%9E%D7%A1%D7%98%D7%95%D7%93%D7%95%D7%9F" target="_blank" rel="noopener noreferrer">מדריך</a> שם, שמסביר מה זה מסטודון ובמה הוא שונה מהרשתות החברתיות שהורגלנו אליהן).</p>
+    <p>יש גם <a href="https://github.com/tootsuite/documentation/blob/master/Using-Mastodon/Apps.md#list-of-apps" target="_blank" rel="noopener noreferrer">אפליקציות לסלולרים</a>.</p>
   </div>
   <script src="js/jquery.min.js"></script>
   <script>
