toot.html edits

--- a/toot.html
+++ b/toot.html
@@ -21,22 +21,28 @@
       <a id="page-title" href="./">לדבר על זה<br>
       <small>עם האחות ב. כהן</a></small>
     </h1>
-    <p class="status" id="toot-intro">
+    <div class="status" id="toot-intro">
       מחפש "<span class="subject"></span>"
       בארכיון האחות ב. כהן...
-    </p>
-    <p class="status" id="toot-found">
+    </div>
+    <div class="status" id="toot-found">
       אתן מוזמנות
       להגיב ו/או לעשות לייקים
       ב<a target="_blank" href="https://tooot.in">תווות.ים</a>
       בנושא
       <strong><a href="" id="tootlink"><span class="subject"></span></a></strong>.
-    </p>
-    <p class="status" id="toot-not-found">
+    </div>
+    <div class="status" id="toot-not-found">
       לצערנו, האחות ב. כהן מעולם לא דיברה על
       <strong><span class="subject"></span></strong>.
-      אולי זה קרה לפני שהיא נולדה.
-    </p>
+      <ul>
+        <li>אולי זה קרה לפני שהיא נולדה.</li>
+        <li>אולי היא פשוט עוד לא התעכנה לגבי זה (היא קצת איטית).</li>
+      </ul>
+      בינתיים, אפשר לדבר על 
+      <span class="subject"></span>
+      <a href="https://tooot.im/@sisterbotcoen/818214">בדיון הכללי</a>.
+    </div>
     <hr/>
     <p><a href="https://tooot.im/@sisterbotcoen" target="_blank" rel="noopener noreferrer">האחות ב. כהן</a> היא השגרירה ה<a href="https://he.wikipedia.org/wiki/%D7%91%D7%95%D7%98" target="_blank" rel="noopener noreferrer">רובוטית</a> של האחיות ברשת החברתית <a href="https://mekomit.co.il/%d7%9e%d7%a1%d7%98%d7%95%d7%93%d7%95%d7%9f/" target="_blank" rel="noopener noreferrer">מסטודון</a>. היא מדווחת שם על <a target="_blank" href="http://coensisters.org#%D7%9C%D7%A7%D7%91%D7%9C%20%D7%94%D7%AA%D7%A8%D7%90%D7%95%D7%AA%20%D7%A2%D7%9C%20%D7%97%D7%99%D7%93%D7%95%D7%A9%D7%99%D7%9D%20%D7%91%D7%90%D7%AA%D7%A8">חידושים</a> באתר האחיות.
     הפוסטים שלה הם גם מקום מצויין לדון בו באייטמים אליהם היא מפנה
