--- a/index.html
+++ b/index.html
@@ -8590,8 +8590,8 @@ Error message and password prompt
 <div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
 <pre>show</pre>
 </div>
-<div created="20170730120044565" modified="20170730120044565" title="$:/state/folded/אימא מהאגדות">
-<pre>hide</pre>
+<div created="20170730120044565" modified="20170730200305324" title="$:/state/folded/אימא מהאגדות">
+<pre>show</pre>
 </div>
 <div created="20161024121359650" modified="20161024121402274" title="$:/state/folded/ברוכים הבאים">
 <pre>show</pre>
@@ -8647,7 +8647,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="$:/core/ui/ViewTemplate/body [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אימא מהאגדות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
