--- a/toot.html
+++ b/toot.html
@@ -37,7 +37,7 @@
       <strong><span class="subject"></span></strong>.
       <ul>
         <li>אולי זה קרה לפני שהיא נולדה.</li>
-        <li>אולי היא פשוט עוד לא התעכנה לגבי זה (היא קצת איטית).</li>
+        <li>אולי היא פשוט עוד לא התעדכנה לגבי זה (היא קצת איטית).</li>
       </ul>
       בינתיים, אפשר לדבר על 
       <span class="subject"></span>
