--- a/toot.html
+++ b/toot.html
@@ -38,6 +38,7 @@
       <ul>
         <li>אולי זה קרה לפני שהיא נולדה.</li>
         <li>אולי היא פשוט עוד לא התעדכנה לגבי זה (היא קצת איטית).</li>
+        <li>אולי היא כבר התעדכנה, אבל לא שמנו לב (גם אנחנו קצת איטיים).</li>
       </ul>
       בינתיים, אפשר לדבר על 
       <span class="subject"></span>
