--- a/toot.html
+++ b/toot.html
@@ -18,7 +18,7 @@
     <img style="max-width:8em; height:auto; float:left"
          src="pictures/sisterbotcoen-mordech.png"/>
     <h1>
-      <a id="page-title" href="./">לדבר על זה<br>
+      לדבר על זה<br>
       <small>עם האחות ב. כהן</a></small>
     </h1>
     <div class="status" id="toot-intro">
@@ -33,7 +33,7 @@
       <strong><a href="" id="tootlink"><span class="subject"></span></a></strong>.
     </div>
     <div class="status" id="toot-not-found">
-      לצערנו, האחות ב. כהן מעולם לא דיברה על
+      עד כמה שידוע לנו, האחות ב. כהן מעולם לא דיברה על
       <strong><span class="subject"></span></strong>.
       <ul>
         <li>אולי זה קרה לפני שהיא נולדה.</li>
