toot.html is no longer on gh-pages

--- a/index.html
+++ b/index.html
@@ -8501,8 +8501,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20170730181458093" modified="20170730190152950" tags="$:/tags/ViewTemplate" title="$:/core/ui/ViewTemplate/body">
-<pre>\define tootlink() [[🍓|http://coensisters.org/toot.html#$(currentTiddler)$]]
+<div created="20170730181458093" modified="20170731000432117" tags="$:/tags/ViewTemplate" title="$:/core/ui/ViewTemplate/body">
+<pre>\define tootlink() [[🍓|https://swatwt.com/sistertoots/#$(currentTiddler)$]]
 
 &lt;$reveal tag=&quot;div&quot; class=&quot;tc-tiddler-body&quot; type=&quot;nomatch&quot; state=&lt;&lt;folded-state&gt;&gt; text=&quot;hide&quot; retain=&quot;yes&quot; animate=&quot;yes&quot;&gt;
 
@@ -8640,10 +8640,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170730204441153" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20170731000457755" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20170730204443214" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170731000501079" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8652,7 +8652,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[גורה מספרת 07]] [[גורה מספרת 08]] $:/user/styles [[ארנון חן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="$:/core/ui/ViewTemplate/body [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
