--- a/index.html
+++ b/index.html
@@ -709,6 +709,8 @@ Error message and password prompt
 
 <li>פיליפ סימור הופמן</li>
 
+<li>פינה באוש</li>
+
 <li>פלפלים קלויים</li>
 
 <li>פנטונה</li>
@@ -8654,7 +8656,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[איזדורה דאנקן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פינה באוש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8674,7 +8676,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170731120415734" title="$:/temp/search">
+<div created="20161023184814872" modified="20170802142132504" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9566,12 +9568,12 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 </pre>
 </div>
-<div created="20170320190240293" modified="20170507182450288" tags="HH" title="אנט ג'מיימה">
-<pre>[img[pictures/atTUFJpqjadwrioe.jpg]]
+<div created="20170320190240293" modified="20170802142203069" tags="HH" title="אנט ג'מיימה">
+<pre>[img[pictures/aunt-jemima.jpg]]
 
 !!![[גורה]]:
 
-אנט ג'מיימה היא חבורה של ארבעה חברה ילידי העיר השוכנת לחופי [[ים טתיס]]. 
+אנט ג'מיימה היא חבורה של ארבעה חברה ילידי [[העיר|מצפה ראשית]] השוכנת לחופי [[ים טתיס]]. 
 
 מידי ערב הם מנגנים ושרים [[בקפה מילר|קפה מילר]].
 
@@ -12129,7 +12131,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אימא של [[אלפרד]], שנטשה את ביתם ונסעה לצרפת אל גבר אחר כשאלפרד היה בן 9.</pre>
 </div>
-<div created="20161024181726961" modified="20170507181620472" tags="HH" title="מרינה זוטו">
+<div created="20161024181726961" modified="20170802142408135" tags="HH" title="מרינה זוטו">
 <pre>פרוייקט [[דיור מוגז]] ב[[ים טתיס]]
 
 [img[pictures/marina-zuto.jpg]]
@@ -12138,7 +12140,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מרינה זוטו היא חלק נוסף בתצרף המוקפד של הדיור המוגז של [[מצפה ראשית]] שליד אסדת טתיס.
 
-המודל לקוח [[מספרינגפילד|https://he.wikipedia.org/wiki/%D7%A1%D7%A4%D7%A8%D7%99%D7%A0%D7%92%D7%A4%D7%99%D7%9C%D7%93_(%D7%9E%D7%A9%D7%A4%D7%97%D7%AA_%D7%A1%D7%99%D7%9E%D7%A4%D7%A1%D7%95%D7%9F)]], ולמעט כרסום חלקים משלושה יערות, וכתישת שוניות אלמוגים לא נעשה כל נזק לסביבה.</pre>
+המודל לקוח [[מספרינגפילד|https://he.wikipedia.org/wiki/%D7%A1%D7%A4%D7%A8%D7%99%D7%A0%D7%92%D7%A4%D7%99%D7%9C%D7%93_(%D7%9E%D7%A9%D7%A4%D7%97%D7%AA_%D7%A1%D7%99%D7%9E%D7%A4%D7%A1%D7%95%D7%9F)]], ולמעט כרסום חלקים משלושה יערות, וכתישת שוניות אלמוגים לא נעשה כל נזק נראה לעין לסביבה.</pre>
 </div>
 <div created="20170331201741562" modified="20170417190759219" tags="[[אחות כהן]]" title="מרק">
 <pre>[img[pictures/mark1.jpg]]
@@ -12420,19 +12422,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
 </div>
-<div created="20170606204237997" modified="20170731120540451" tags="[[אירי טוענת]]" title="ספירל">
+<div created="20170606204237997" modified="20170801125356471" tags="[[אירי טוענת]]" title="ספירל">
 <pre>[img[pictures/spiral.jpg]]
 
 !!![[אירי]]:
 
 [[אצל מרתה גרהם|https://en.wikipedia.org/wiki/Martha_Graham]], התנועה הספירלית של הגו, היא אחת מתנועות הבסיס [[בטכניקת המחול שיצרה|https://en.wikipedia.org/wiki/Graham_technique]].
 
-בישיבה, התנועה הספירלית מתחילה מהאגן, ממשיכה עם בית החזה ואחריו [[הצוור|צווארים]].
+בישיבה, התנועה הספירלית מתחילה מהאגן, ממשיכה עם בית החזה ואחריו [[הצוואר|צווארים]].
 
 אצל מרתה לא נועלים נעלי בלט, הזרועות פתוחות, כף הרגל הקדמית ב&quot;פלקס&quot;.
 
 
-מועילה מאד החשיבה [[האלכסנדרונית|שיטת אלכסנדר]], להפחתת נזקי קשיחות [[הטכניקות הקשוחות|איזדורה דנקן]].
+מועילה מאד החשיבה [[האלכסנדרונית|שיטת אלכסנדר]], להפחתת נזקי קשיחות [[הטכניקות הקשוחות|איזדורה דאנקן]].
 
 </pre>
 </div>
@@ -13240,6 +13242,17 @@ __אופן ההכנה____
 
 את [[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]].</pre>
 </div>
+<div created="20170801101117385" modified="20170802142854670" tags="[[אחיות חוץ]]" title="פינה באוש">
+<pre>[img[pictures/pina-bausch.jpg]]
+
+!!![[אירי]]:
+[[פינה באוש|https://en.wikipedia.org/wiki/Pina_Bausch]] וחברי [[תאטרון המחול וופרטל|http://www.pina-bausch.de/en/]] רוקדים. זו יכולה להיות ריצה קלה או הליכה רגילה או [[rond de jambe en lair|http://www.abt.org/education/dictionary/terms/rond_jambe_lair.html]] 
+
+[[זה|https://www.youtube.com/watch?v=LA65HrIMrjs]] למשל, קטע שרקדן של הלהקה הביא לאחר חופשה, [[ונכנס|https://www.youtube.com/watch?v=CIrRR48s5As]] למופע ציפורנים.
+
+[[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה הכניסו [[ל-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
+</pre>
+</div>
 <div created="20170405154213420" modified="20170405180055892" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
 
@@ -13469,18 +13482,18 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
-<div created="20170119232802609" modified="20170507182502882" tags="HH" title="קפה מילר">
-<pre>[img[pictures/zGhVc9HucPGCaiKJ.jpg]]
+<div created="20170119232802609" modified="20170802132212891" tags="HH" title="קפה מילר">
+<pre>[img[pictures/cafe-muller.jpg]]
 
 !!![[גורה]]:
 
 הקפה שנמצא בקומה הראשונה של [[געזונטהייטס]], והוא קפה בר.
 
-הוא שייך לשלום, שמעריץ את פינה באוש, אך מנהלת אותו [[הברמנית]] ששמה גורה.
+הוא שייך לשלום, שמעריץ את [[פינה באוש]], אך מנהלת אותו [[הברמנית]] ששמה גורה.
 
 :)
 
-ה HAPPY HOUR היומי קורה בקפה מילר, והוא כולל משקאות מוזלים והופעה של [[אנט ג'מיימה]], להקת הבית.
+ה HAPPY HOUR היומי קורה בקפה מילר, והוא כולל קוקטיילים ומשקאות במחיר מוזל, והופעה של [[אנט ג'מיימה]].
 
 
 
