--- a/index.html
+++ b/index.html
@@ -8660,7 +8660,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="משנים [[עוגת שזיפים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[המטבח על פי ז'נבייב]] [[הספלים מהם אנו שותים]] [[וינסנט ואן-גוך]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8680,7 +8680,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170802165304803" title="$:/temp/search">
+<div created="20161023184814872" modified="20170803113619661" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11085,7 +11085,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170705183317472" modified="20170706203742682" tags="[[המטבח על פי ז'נבייב]]" title="הספלים מהם אנו שותים">
+<div created="20170705183317472" modified="20170803113709632" tags="[[המטבח על פי ז'נבייב]]" title="הספלים מהם אנו שותים">
 <pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11094,7 +11094,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הספלים מהם אנו שותים הם כמו תחפושת: 
 
-לפעמים אני מורה ליוגה, לפעמים איכרה סיבירית שקיבלה סרוויס כחלק מנדוניה, ולפעמים אני גבר ספרדי עם שפם.</pre>
+לפעמים אני מורה ליוגה, למרות שאני לא מתה על טעם של גלזורה. לפעמים איכרה סיבירית שקיבלה סרוויס כחלק מנדוניה, ולפעמים אני גבר ספרדי עם שפם.</pre>
 </div>
 <div created="20170318200354245" modified="20170507181909075" tags="HH" title="הספנית">
 <pre>[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
